Fix top navigation bar on Firefox.

--- a/styles.css
+++ b/styles.css
@@ -59,7 +59,7 @@ body {
   overflow: visible;
   background: #333;
   border-radius: 100px;
-  height: 50px;
+  height: 52px;
   transition: background 0.5s;
 }
 
@@ -73,8 +73,8 @@ body {
   -webkit-tap-highlight-color: transparent;
   transition: /* opacity 0.5s */ box-shadow 0.5s;
   border-radius: 100px;
-  width: 50px;
-  height: 50px;
+  width: 52px;
+  height: 52px;
   /*   border: none !important; */
 }
 
